--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <link rel="stylesheet" href="style.css">
     <html>
         <head>
-            
             <meta charset="UTF-8">
+            <script> function afficheVille() { alert(villeChoisie); }
+            let villeChoisie = "Niort" 
+            </script>
         </head>
 
-    <body>
+    <body onload="afficheVille()">
         <header>
             <p> TD n°1 Programmation web – Application météo </p> 
         </header>
