--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
         <div id="Niort" class="ville">
             <h2>Niort</h2>
             <p>12°, pluvieux </p>
-            <img src="pluvieux.png" width="5%" alt="pluvieux" />
+            <!-- <img src="pluvieux.png" width="5%" alt="pluvieux" /> -->
         </div>
 
         <div id="Banana" class="ville">
             <h2>Banana</h2>
             <p>25°, ifébô</p>
-            <img src="ensoleille.png" width="5%" alt="ensoleille" />
+            <!-- <img src="ensoleille.png" width="5%" alt="ensoleille" /> -->
         </div>
 
         <div id="Llanfairpwllgwyngyllgogerychwyrndrobwllllantysiliogogogoch" class="ville">
             <h2>Llanfairpwllgwyngyllgogerychwyrndrobwllllantysiliogogogoch</h2>
             <p>11°, orageux</p>
-            <img src="orageux.png" width="5%" alt="orageux" />
+            <!-- <img src="orageux.png" width="5%" alt="orageux" />  -->
         </div>
     </div>
 
     <footer>
         <p>CHAINE Maël</p>
-        <p> icônes météo : <a href="https://thenounproject.com">the noun project</a> </p>
+        <!-- <p> icônes météo : <a href="https://thenounproject.com">the noun project</a> </p> -->
     </footer>
 </body>
 
